WGSL compilation: cannot use override value in constant expression https://bugs.webkit.org/show_bug.cgi?id=302750 rdar://165093959

Reviewed by Mike Wyrzykowski.

Array type expressions were always inferring the count as an override expression,
but they should be treated as constant if we're already in a constant context.

Test: Tools/TestWebKitAPI/Tests/WGSL/TypeCheckingTests.mm
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Tools/TestWebKitAPI/Tests/WGSL/TypeCheckingTests.mm:
(TestWGSLAPI::TEST(WGSLTypeCheckingTests, Constants)):

Canonical link: https://commits.webkit.org/306020@main